--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 
 script:
   - ln -s $(which ansible)
+  - ln -s $(which ansible-playbook)
   - pyinstaller ansible.spec
   - ./dist/ansible --version
   - pyinstaller ansible-playbook.spec
