Fix mismatched docker port and release dirs

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ script:
   #- pyinstaller ansible-playbook.spec
   #- ./dist/ansible-playbook --version
   - docker build -t ansible-standalone .
-  - docker run -d -p 8000:8080 ansible-standalone
-  - wget http://localhost:8080/ansible
-  - wget http://localhost:8080/ansible-playbook
+  - docker run -d -p 8080:8080 ansible-standalone
+  - wget http://localhost:8080/dist/ansible
+  - wget http://localhost:8080/dist/ansible-playbook
 
 deploy:
   provider: releases
