--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ script:
   #- ./dist/ansible-playbook --version
   - docker build -t ansible-standalone .
   - docker run --net=host -d -p 8000:8000 ansible-standalone
-  #- wget --tries=10 http://$(hostname):8000/dist/ansible
+  - sleep 10
+  - wget --tries=10 http://$(hostname):8000/dist/ansible
   - wget --tries=10 http://$(hostname):8000/dist/ansible-playbook
 
 deploy:
