--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--e git+git://git@github.com:ansible/ansible.git#egg=ansible
+-e git+https://github.com/ansible/ansible.git#egg=ansible
 pyinstaller
 pywinrm[kerberos]
