--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--e git+https://github.com/ansible/ansible.git#egg=ansible
+git+https://github.com/ansible/ansible.git
 pyinstaller
 pywinrm[kerberos]
